--- a/gcmrc-ui/pom.xml
+++ b/gcmrc-ui/pom.xml
@@ -83,6 +83,21 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 			</plugin>
+                        <plugin>
+                            <groupId>com.github.klieber</groupId>
+                            <artifactId>phantomjs-maven-plugin</artifactId>
+                            <version>0.7</version>
+                            <executions>
+                                <execution>
+                                    <goals>
+                                        <goal>install</goal>
+                                    </goals>
+                                </execution>
+                            </executions>
+                            <configuration>
+                                <version>2.0.0</version>
+                            </configuration>
+                        </plugin>
 			<plugin>
 				<groupId>com.github.searls</groupId>
                 <artifactId>jasmine-maven-plugin</artifactId>
