--- a/gcmrc-ui/pom.xml
+++ b/gcmrc-ui/pom.xml
@@ -140,7 +140,7 @@
                                 </execution>
                             </executions>
                             <configuration>
-                                <version>2.0.0</version>
+                                <version>2.1.1</version>
                             </configuration>
                         </plugin>
                         <plugin>
@@ -158,6 +158,9 @@
                             <configuration>
                                 <jsSrcDir>${project.basedir}</jsSrcDir>
                                 <haltOnFailure>false</haltOnFailure>
+                                <phantomjs>
+                                    <version>2.1.1</version>
+                                </phantomjs>
                                 <preloadSources>
                                     <source>classpath/META-INF/resources/webjars/closure-library/${version.closure}/goog/base.js</source>
                                     <source>classpath/META-INF/resources/webjars/closure-library/${version.closure}/goog/debug/error.js</source>
