--- a/gcmrc-services/pom.xml
+++ b/gcmrc-services/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>gcmrc-parent</artifactId>
 		<groupId>gov.usgs.cida.gcmrc</groupId>
-		<version>1.1.82</version>
+		<version>1.1.83-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>gcmrc-services</artifactId>
