--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>gov.usgs.cida.gcmrc</groupId>
 	<artifactId>gcmrc-parent</artifactId>
-	<version>1.1.82</version>
+	<version>1.1.83-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>GCMRC Parent</name>
 	
@@ -111,7 +111,7 @@
 	
 	<scm>
 		<developerConnection>scm:git:ssh://git@github.com/USGS-CIDA/gcmrc-ui-parent.git</developerConnection>
-	  <tag>gcmrc-parent-1.1.82</tag>
+	  <tag>HEAD</tag>
   </scm>
 	
 	<distributionManagement>
